<resources>
    <string name="app_name">Lock Screen Notes</string>
    <string name="qr_cache_name" translatable="false">lock_screen_notes_qr</string>
    <string name="action_settings">Settings</string>
    <string name="concat_dash" translatable="false">%1$s - %2$s</string>
    <string name="last_edited">Last edited: %1$s</string>
    <string name="note_position">#%1$s</string>
    <string name="note_notification_index" translatable="false">#%1$s:</string>
    <string name="delete">Delete</string>
    <string name="position">Position</string>
    <string name="timestamp">Timestamp</string>
    <string name="enabled">Enabled</string>
    <string name="delete_dialog_title">Delete note</string>
    <string name="delete_dialog_content">Are you sure you want to delete this note?\n\n<i>%1$s</i></string>
    <string name="delete_dialog_content_multiple">Are you sure you want to delete those %1$s notes?</string>
    <string name="notes_notification_ticker">Lockscreen note has been created.</string>
    <string name="notification_multiple_notes">%1$s notes</string>
    <string name="pref_settings_general">General</string>
    <string name="settings_low_priority_note_title">Subtle notifications</string>
    <string name="settings_low_priority_note_flavor">Hides the notifications from the notification bar and only displays them when pulling down the <i>notification pull down bar</i>.\nDepending on your system, the device needs to be unlocked for notifications to be displayed this way.</string>
    <string name="advanced">Advanced</string>
    <string name="share_via_this_app">Create Note</string>
    <string name="prefs_home_screen_lines_title">Minimum note lines</string>
    <string name="prefs_home_screen_lines_summary">In the main screen, the minimum amount of lines a note must have. Minimum lines differ by device resolution.\nCurrently selected: %1$s</string>
    <string name="home_screen_lines_too_small">Given line size is too small. Changed back to default.</string>
    <string name="prefs_date_detail_title">Level of detail: Dates</string>
    <string name="prefs_currently_selected">Currently selected: %1$s</string>
    <string name="prefs_time_detail">Level of detail: Time</string>
    <string name="prefs_full">Full</string>
    <string name="prefs_long">Long</string>
    <string name="prefs_medium">Medium</string>
    <string name="prefs_short">Short</string>
    <string name="error_unknown"><![CDATA[<unknown>]]></string>
    <string name="prefs_about_title">About</string>
    <string name="prefs_about_summary">%1$s, version %2$s created by Nils Förster</string>
    <string name="error_not_in_android_store_yet">Error! This app is not in the android App store yet.</string>
    <string name="error_note_sharing_listener">Error while handling your request. Please try again.</string>
    <string name="success_note_sharing_listener">Your note was created without problems.</string>
    <string name="action_delete_all">Delete all notes</string>
    <string name="action_disable_all">Disable all notes</string>
    <string name="delete_all_dialog_title">Delete all notes</string>
    <string name="delete_all_dialog_text">Are you sure you want to delete all notes currently saved?</string>
    <string name="delete_all_disabled_dialog_text">Are you sure you want to delete %1$d out of the %2$d notes currently saved?</string>
    <string name="action_clear">Clear</string>
    <string name="action_move_to_bottom">Move cursor to bottom</string>
    <string name="action_share">Share</string>
    <string name="action_copy_text">Copy text</string>
    <string name="action_copy_text_success">Text copied to clipboard.</string>
    <string name="share_using">Share note via</string>
    <string name="share_via">Share via</string>
    <string name="mail_via">Mail via</string>
    <string name="action_clear_confirm">Are you sure you want to clear this note\'s text?</string>
    <string name="pref_view_on_github_title">View this App on GitHub</string>
    <string name="settings_dismissible_notes_title">Dismissible notifications</string>
    <string name="settings_dismissible_notes_flavor">While enabled you can dismiss the notifications in the lock screen by swiping horizontally.\nDismissing a notification automatically disables the corresponding note.</string>
    <string name="prefs_separate_notes_title">Separate notifications</string>
    <string name="prefs_separate_notes_flavor">While enabled, every notification you create will create its own notification in the lockscreen.\nOtherwise they are summarized into a combined notification.\nDepending on your device, too many notifications may be automatically grouped together by the system.</string>
    <string name="error_invalid_value">Could not handle that value. Resetting to default.</string>
    <string name="pref_view_on_github_summary">This app is free, open source and does not contain ads. This will not change in the future. You can view and contribute to this app\'s sourcecode online if you tap here.\nTranslations are always welcome.</string>
    <string name="settings_auto_enable_new_notes_title">Auto-enable new notes</string>
    <string name="settings_auto_enable_new_notes_flavor">When you add a new note it will automatically be enabled.</string>
    <string name="tutorial_welcome">Let\'s get started!</string>
    <string name="tutorial_main_text">Tap on a note\'s icon to toggle whether a notification for it will be displayed while the app is closed.\n\nRemember to check the settings to customize the notification style.</string>
    <string name="tutorial_disabled">No notifications</string>
    <string name="tutorial_enabled">Notifications</string>
    <string name="tutorial_starting_instructions">Add a new note by tapping on the button below.</string>
    <string name="tutorial_do_not_show_again">Don\'t show this again</string>
    <string name="prefs_reset_tutorial_title">Reset tutorial</string>
    <string name="prefs_reset_tutorial_summary">While you have no notes stored on this device the app\'s tutorial will be displayed again.</string>
    <string name="prefs_reset_tutorial_success">Tutorial has been reset.</string>
    <string name="nothing_to_display">Nothing to display.</string>
    <string name="error_internal_error">An internal error occurred.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_info"><![CDATA[Info & About]]></string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_date_and_time"><![CDATA[Date & Time]]></string>
    <string name="prefs_time_relative_title">Use relative date and time</string>
    <string name="prefs_time_relative_summary">If enabled dates will be displayed relative to the current time (e.g. \'5 minutes ago\').\nOtherwise absolute dates will be used (e.g. \'May 20, 2017\').</string>
    <string name="prefs_time_locale_default_value" translatable="false">default locale</string>
    <string name="pref_credits" translatable="false">Credits</string>
    <string name="prefs_credits_text_drawable" translatable="false"><i>Text Drawable</i> by Wireless Designs, LLC.</string>
    <string name="prefs_credits_timber" translatable="false"><i>Timber</i> by Jake Wharton.</string>
    <string name="prefs_credits_leakcanary" translatable="false"><i>LeakCanary</i> by Square, Inc.</string>
    <string name="prefs_credits_balloon" translatable="false"><i>Balloon</i> by skydoves.</string>
    <string name="action_cancel_edit">Cancel edit</string>
    <string name="action_cancel_edit_confirm">Are you sure you want to cancel editing this note?\n\nAll unsaved changes will be lost.</string>
    <string name="action_delete_all_disabled">Delete all disabled</string>
    <string name="prefs_quick_delete_title">Quick delete notes</string>
    <string name="prefs_quick_delete_flavor">While enabled you will not be asked to confirm that you want to delete an individual a note in a message-box.</string>
    <string name="info_note_deleted">Note deleted: %1$s</string>
    <string name="action_undo">Undo</string>
    <string name="error_no_note_to_delete">No note to delete found.</string>
    <string name="error_note_save_failed">Failed to save the note.</string>
    <string name="info_note_recovered">Note recovered: %1$s</string>
    <string name="prefs_action_bar_icon_scale">Menu bar icon scale</string>
    <string name="tutorial_auto_save">Changes to notes are auto-saved whenever you leave this screen.</string>
    <string name="ok_got_it">OK, got it!</string>
    <string name="prefs_credits_icon" translatable="false">Original App Icon by Patrick Quiskamp</string>
    <string name="pref_view_on_play_store">View on Google Play</string>
    <string name="pref_share_app_summary">Share this app</string>
    <string name="pref_share_app_text">Check out the app %1$s on Google Play: %2$s</string>
    <string name="prefs_credits_debug_db" translatable="false"><i>Android Debug Database</i> by Amit Shekhar</string>
    <string name="prefs_credits_zxing" translatable="false"><i>ZXing</i> by Google, Inc.</string>
    <string name="action_to_qr_code">Display as QR Code</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="pref_settings_display_style">Display style</string>
    <string name="pref_settings_display_priority">Priority</string>
    <string name="settings_high_priority_note_title">High priority notifications</string>
    <string name="settings_high_priority_note_flavor">Notifications are displayed high on the notifications list.</string>
    <string name="error_qr_generation_failed">Failed to create the QR code!</string>
    <string name="error_qr_not_rendered">QR Code isn\'t created yet!</string>
    <string name="action_open_weblinks">Open weblinks</string>
    <string name="action_add">Add new</string>
    <string name="action_backup">Backup &amp; Restore</string>
    <string name="pref_updates">Updates</string>
    <string name="pref_github_releases_title">External update feed</string>
    <string name="pref_github_releases_summary">You can subscribe to this external feed and get notified about updates to this app.</string>
    <string name="pref_update_day_counter_title">Last update</string>
    <string name="action_info">Information</string>
    <string name="pref_auto_backup_info_summary">You can create and restore notes from backups. Use the menu in the main screen to do this.  Backups are stored in this location: %1$s\nThe app needs access to the external storage in order to create backups.</string>
    <string name="pref_auto_backup">Automatic Backups</string>
    <string name="pref_backup">Backups</string>
    <string name="pref_auto_backups_enabled_title">Create backups automatically</string>
    <string name="pref_auto_backups_enabled_summary">Backups are made periodically at 2:00 AM (may differ depending on your device\'s power saving policy).</string>
    <string name="pref_auto_backups_schedule_days_title">Backup schedule</string>
    <string name="pref_auto_backups_schedule_days_summary">Schedule backups every %1$s day(s).</string>
    <string name="pref_auto_backups_notification_enabled_title">Show notification</string>
    <string name="pref_auto_backups_notification_enabled_summary">Displays a notification when an automatic backup is made.\nFailure to create backups are displayed as notifications regardless of this setting.</string>
    <string name="pref_auto_backups_delete_old_title">Delete old backups</string>
    <string name="pref_auto_backups_delete_old_summary">Automatically deletes old backups, so you never have more than %1$s files.</string>
    <string name="action_open_phone">Dial number</string>
    <string name="action_open_mail">Send mail</string>
    <string name="date_preference_preview">Current time preview (Tap to update):</string>
    <string name="action_review_notification_permissions">Review notification permissions</string>
</resources>