<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/action_info">
        <Preference
            android:key="pref_auto_backup_info"
            android:summary="@string/pref_auto_backup_info_summary"
            android:title="@string/action_backup"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_auto_backup">

        <SwitchPreference
            android:key="pref_auto_backups_enabled"
            android:defaultValue="false"
            android:summary="@string/pref_auto_backups_enabled_summary"
            android:title="@string/pref_auto_backups_enabled_title"
            />

        <EditTextPreference
            android:defaultValue="3"
            android:dependency="pref_auto_backups_enabled"
            android:inputType="number"
            android:singleLine="true"
            android:key="pref_auto_backups_schedule_days"
            android:summary="@string/pref_auto_backups_schedule_days_summary"
            android:title="@string/pref_auto_backups_schedule_days_title"
            />

        <CheckBoxPreference
            android:key="pref_auto_backups_delete_old"
            android:dependency="pref_auto_backups_enabled"
            android:defaultValue="true"
            android:summary="@string/pref_auto_backups_delete_old_summary"
            android:title="@string/pref_auto_backups_delete_old_title"
            />

        <CheckBoxPreference
            android:key="pref_auto_backups_notification_enabled"
            android:dependency="pref_auto_backups_enabled"
            android:defaultValue="false"
            android:summary="@string/pref_auto_backups_notification_enabled_summary"
            android:title="@string/pref_auto_backups_notification_enabled_title"
            />

    </PreferenceCategory>

</PreferenceScreen>