<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="de.nilsfo.lockscreennotes.activity.SettingsActivity$GeneralPreferenceFragment"
        app:icon="@drawable/baseline_build_black_24"
        app:key="general_header"
        app:title="@string/pref_header_general" />

    <Preference
        app:fragment="de.nilsfo.lockscreennotes.activity.SettingsActivity$NotificationsPreferenceFragment"
        app:icon="@drawable/ic_notifications_black_24dp"
        app:key="notifications_header"
        app:title="@string/pref_notifications" />


    <Preference
        app:fragment="de.nilsfo.lockscreennotes.activity.SettingsActivity$AutoBackupPreferenceFragment"
        app:icon="@drawable/baseline_save_alt_black_24"
        app:key="backup_header"
        app:title="@string/pref_backup" />

    <Preference
        app:fragment="de.nilsfo.lockscreennotes.activity.SettingsActivity$DateAndTimePreferenceFragment"
        app:icon="@drawable/ic_access_time_black_24dp"
        app:key="date_and_time_header"
        app:title="@string/pref_date_and_time" />

    <Preference
        app:fragment="de.nilsfo.lockscreennotes.activity.SettingsActivity$InfoAndAboutPreferenceFragment"
        app:icon="@drawable/ic_info_black_24dp"
        app:key="info_and_about_header"
        app:title="@string/pref_header_info" />

</PreferenceScreen>